fix signup layout and alignment

--- a/src/page/signup/index.scss
+++ b/src/page/signup/index.scss
@@ -7,3 +7,8 @@
 
 
 
+.input {
+    background-color: "#4BDEFF";
+    border: none;
+    color: black;
+}
